--- a/mi-primera-pagina-web.html
+++ b/mi-primera-pagina-web.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mi primera Página HTML</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>¡Bienvenido a mi Página Web</h1>
